# Crash2Mesh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.txt
apps/: CMakeLists.txt
apps/gui/: CMakeLists.txt  main.cpp
apps/pretests/: CMakeLists.txt  main.cpp
apps/tests/: CMakeLists.txt  main.cpp
include/crash2mesh/algorithm/: mesh_analyzer.hpp  mesh_builder.hpp  mesh_decimater.hpp  surface_extractor.hpp
include/crash2mesh/algorithm/decimater/: robust_decimater.hpp
include/crash2mesh/algorithm/modules/: framewise_boundary.hpp  framewise_normal.hpp  framewise_quadric.hpp  framewise_strain.hpp  mod_base.hpp  mod_boundary.hpp  mod_normal.hpp  mod_quadric.hpp  normal_cone.hpp
include/crash2mesh/core/: collectors.hpp  mesh.hpp  structure_elements.hpp  types.hpp
include/crash2mesh/decimater/: robust_decimater.hpp
include/crash2mesh/decimater/modules/: mod_base.hpp  mod_boundary.hpp  mod_normal.hpp  mod_quadric.hpp  mod_quadric_normal.hpp  normal_cone.hpp
include/crash2mesh/fileio/: erf_hdf5_path.hpp  erf_hdf5_reader.hpp
include/crash2mesh/fileio/erfh5/: filecontents.hpp  reader.hpp
include/crash2mesh/io/c2m/: c2m_writer.hpp
include/crash2mesh/io/erfh5/: file_contents.hpp  reader.hpp
include/crash2mesh/util/: logger.hpp  par_for.hpp
include/crash2mesh/viewer/: animation_viewer.hpp  imgui_viewer.hpp
include/fileio/: hdf5reader.hpp
src/: CMakeLists.txt  test.cpp
src/crash2mesh/algorithm/: mesh_analyzer.cpp  mesh_builder.cpp  mesh_decimater.cpp  surface_extractor.cpp
src/crash2mesh/algorithm/decimater/: robust_decimater.cpp
src/crash2mesh/core/: collectors.cpp  structure_elements.cpp
src/crash2mesh/decimater/: robust_decimater.cpp
src/crash2mesh/decimater/modules/: mod_base.cpp  mod_boundary.cpp  mod_normal.cpp  mod_quadric.cpp  mod_quadric_normal.cpp  normal_cone.cpp
src/crash2mesh/fileio/: erf_hdf5_path.cpp  erf_hdf5_reader.cpp  hdf5reader.cpp
src/crash2mesh/fileio/erfh5/: file_contents.cpp  filecontents.cpp  reader.cpp
src/crash2mesh/io/c2m/: c2m_writer.cpp
src/crash2mesh/io/erfh5/: file_contents.cpp  reader.cpp
src/crash2mesh/viewer/: animation_viewer.cpp  imgui_viewer.cpp
